# vicon_datastream

./: CMakeLists.txt  README.md  ViconDataStreamSDK_CTest
app/: CMakeLists.txt
lib/: libViconDataStreamSDK_C.dylib  libViconDataStreamSDK_CPP.dylib
src/: ViconDataStreamSDK_CPPTest.cpp  vicon_simple_clean.cpp
